fixed project.js footer & project spacing

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ h4 {
 #heroHeader {
     font-weight: 600;
 }
+
 p {
     font-size: 18px;
 
@@ -112,13 +113,14 @@ p,
 small {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 /*Smaller Font for Mobile */
 @media screen and (max-width: 989px) {
     main p {
-      font-size: 16px; 
+        font-size: 16px;
     }
-  }
-  
+}
+
 /*BUTTONS*/
 .btnPrimary,
 .btnSecondary {
@@ -224,9 +226,9 @@ small {
 }
 
 /*PROJECTS PAGE*/
-.projectCard{
+.projectCard {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -258,10 +260,12 @@ small {
 
 /*Center Stack layout at bootstrap grid breakpoints*/
 @media screen and (max-width: 992px) {
+
     /*Add space between header & the content above it*/
     .projectCard h2 {
         margin-top: 16px;
     }
+
     /* Space between buttons & footer*/
     .projectCard:last-of-type {
         margin-bottom: 2em;
@@ -289,6 +293,7 @@ footer .socialLinkBtn {
 
 footer a {
     color: var(--text-color);
+    text-decoration: none;
 }
 
 footer a:hover {
